[gd_scene load_steps=4 format=3 uid="uid://cvupfflc3tnl2"]

[ext_resource type="Script" uid="uid://c3xu8kyd181jt" path="res://Assets/main.gd" id="1_n537y"]
[ext_resource type="PackedScene" uid="uid://br85nh27fp2uu" path="res://Assets/Menus/SelectionWheel/selection_wheel.tscn" id="2_pp6b3"]
[ext_resource type="PackedScene" uid="uid://cue7obxnhoh5k" path="res://Assets/Menus/main_menu.tscn" id="3_qhc5t"]

[node name="Main" type="Node2D"]
script = ExtResource("1_n537y")

[node name="Menus" type="CanvasLayer" parent="."]

[node name="GameMenu" type="CenterContainer" parent="Menus"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectionWheel" parent="Menus/GameMenu" instance=ExtResource("2_pp6b3")]
visible = false
layout_mode = 2

[node name="Levels" type="Node" parent="."]

[node name="MainMenu" parent="Levels" instance=ExtResource("3_qhc5t")]

[connection signal="item_selected" from="Menus/GameMenu/SelectionWheel" to="." method="_on_selection_wheel_item_selected"]
